real lab/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-verify
  # namespace: kube-verify

spec:
  replicas: 3
  selector:
    matchLabels:
      app: kube-verify
  template:
    metadata:
      labels:
        app: kube-verify
    spec:
      containers:
        - name: hello
          image: gcr.io/google-samples/hello-app:1.0

          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            # tcpSocket:
            #   port: 80
          livenessProbe:
            # tcpSocket:
            #   port: 8080
            # initialDelaySeconds: 15
            # periodSeconds: 20
            httpGet:
              path: /healthz
              port: 8080
              httpHeaders:
              - name: Custom-Header
                value: Awesome
            initialDelaySeconds: 3
            periodSeconds: 3
          # limits
          resources:
            requests:
              memory: "1Gi"
              cpu: "0.1"
            limits:
              memory: "2Gi"
              cpu: 2
