real lab/app/microk8s-ingressController-Daemon.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-ingress-microk8s-controller
  # annotations:
  #   deployment.kubernetes.io/revision: "1"
  #   kubectl.kubernetes.io/last-applied-configuration: |
  #     {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"nginx-deployment","namespace":"def>
  # namespace: ingress

spec:
 selector:
    matchLabels:
      app: nginx

template:
  metadata:
    labels:
      app: nginx

  spec:
    containers:
    - name: nginx-ingress-microk8s
      ports:
      - containerPort: 80
      - containerPort: 443
      - name: proxied-tcp-6379
        containerPort: 6379
        hostPort: 6379
        protocol: TCP
