real lab/app/clusterIP.yaml
kind: Service
apiVersion: v1
metadata:
  name: kube-verify
  # namespace: kube-verify

spec:
  selector:
    app: kube-verify
  ports:
    - protocol: TCP
      name: p1
      port: 8081
      targetPort: 80
    # - protocol: TCP
    #   name: p2
    #   port: 8082
    #   targetPort: 80
