real lab/app/nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-verify-service
spec:
  type: NodePort
  ports:
    - targetPort: 80 # pod port
      port: 80 # service port
      nodePort: 30080
  selector: # labels of pod
    app: kube-verify
