real lab/app/ingressBeta.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-ingress
  annotations:
    # using nginx:
    # kubernetes.io/ingress.class: "nginx"
    # Add the following line (staging first for testing, then apply the prod issuer)
    cert-manager.io/cluster-issuer: "letsencrypt-staging" # "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - storylabs.tk
    secretName: storylabs-tk-tls
  rules:
  - host: storylabs.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-verify
          servicePort: 80
  - host: www.storylabs.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-verify
          servicePort: 80
