real lab/app/ingressBetaTraefik.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-verify-ingress
  annotations:
    # using nginx:
    kubernetes.io/ingress.class: "traefik"
    # Add the following line (staging first for testing, then apply the prod issuer)
    cert-manager.io/cluster-issuer: "letsencrypt-staging" # "letsencrypt-prod"
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  rules:
  - host: storylabs.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-verify
          servicePort: 80
  - host: www.storylabs.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-verify
          servicePort: 80

  tls:
  - hosts:
    - storylabs.tk
    secretName: storylabs-tk-tls
